# member-database

./: .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  Dockerfile  Pipfile  README.md  babel.cfg  db.py  env-template  manage.py  member.py  populate_database.py  pyproject.toml  run.sh  setup.py
.github/workflows/: ci.yml  docker.yml
database/: __init__.py  admin.py  admin_views.py  authentication.py  common_schemata.py  config.py  db.py  errors.py  events.py  forms.py  json.py  json_forms.py  mail.py  main.py  member.py  models.py  utils.py
database/events/: __init__.py  common_schemata.py  json_forms.py  models.py
database/events/templates/: index.html  notification.txt  participants.html  pending.html  registered.html  registration.html  waiting.html
database/models/: __init__.py  base.py  events.py  person.py
database/scripts/: populate.py
database/static/js/: latex_widget.js
database/templates/: applications.html  approve_member.txt  base.html  edit.html  event_registration.html  login.html
database/templates/errors/: 401.html  404.html
database/templates/events/: confirmed.txt  registration.html
database/templates/forms/: edit.html  login.html
database/templates/mail/: request_data_mail.txt  welcome.txt
database/translations/de/LC_MESSAGES/: messages.po
member_database/: __init__.py  admin_views.py  authentication.py  config.py  errors.py  forms.py  json.py  log.py  mail.py  main.py  queries.py  utils.py  widgets.py
member_database/authentication/: __init__.py  forms.py  login.py  models.py
member_database/events/: __init__.py  common_schemata.py  forms.py  json_forms.py  models.py
member_database/models/: __init__.py  base.py  person.py  sepa.py
member_database/scripts/: populate.py
member_database/static/: custom.css
member_database/static/js/: latex_widget.js
member_database/templates/: admin_master.html  applications.html  base.html  base_footer.html  data_privacy_statement.html  edit.html  gdpr_form.html  index.html  login_form.html  member_registration.html  navbar.html  request_edit.html  request_sepa.html  sepa.html  simple_form.html
member_database/templates/errors/: 401.html  404.html  500.html
member_database/templates/mail/: approve_member.txt  confirm_sepa_mail.txt  edit_mail.txt  request_data_mail.txt  request_sepa_mail.txt  reset_password.html  signature.txt  verify.txt  welcome.txt
migrations/: env.py
migrations/versions/: 0151da823114_add_footer_to_event.py  02fcfdcb4b37_.py  25a80caf27de_add_sepa.py  288c44807361_.py  392917c0d63f_.py  3f418a3fe442_persons_table.py  66b173ff9a64_add_shortlink_to_event.py  6799f436c654_add_shortlink_to_event.py  6cfe97168561_add_tu_status_field_to_person_and_.py  742e6adb504c_increase_length_of_password_hash_field.py  94cbf12be25a_rename_status_to_status_name_to_enable_.py  aaabaee93687_.py  bdd12eeb872b_.py  c78f3c217703_.py  e6cfd157d26d_first_version_of_person_table.py  e9f0d9b1b411_move_db_filling_into_migration.py  f87786c0cd2d_add_membership_type.py  fb89b8b18838_add_shortlink_to_event.py
pepdb/: asgi.py  common_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
pepdb_auth/: admin.py  apps.py  forms.py  managers.py  models.py  tests.py  urls.py
pepdb_auth/migrations/: 0001_initial.py
pepdb_auth/templates/pepdb_auth/: login.html  logout.html
pepdb_events/: apps.py  views.py
templates/: base.html  index.html  member.yaml
tests/: config.py  conftest.py  populate_database.py  test_auth.py  test_event_schema.py  test_events.py  test_member_registration.py  test_models.py  test_person_edit.py  test_sepa.py
tests/functional/: test_endpoints.py
tests/unit/: test_models.py
(+13 files in other folders)
