[tool.poetry]
name = "member-database"
version = "0.8.0"
description = "Our PeP database solution for members and events"
authors = ["Kevin Heinicke <kevin.heinicke@tu-dortmund.de>", "Maximilian Linhoff <maximilian.linhoff@tu-dortmund.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.1"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^3.1"
flask-mail = "^0.9.1"
python-dotenv = "^0.10"
flask-login = "^0.6"
flask-wtf = "^1.0"
flask-babel = "^1"
jsonschema = "^3.1"
bootstrap-flask = "^1.2"
flask-admin = "^1.6.0"
backoff = "^1.10.0"
gunicorn = {version = "^20.0", optional = true}
psycopg2-binary = {version = "^2.9", optional = true}
email-validator = "^1.1"
flask-cors = "^3.0.10"

[tool.poetry.extras]
deploy = ["gunicorn", "psycopg2-binary"]

[tool.poetry.dev-dependencies]
ipython = "^8.0"
httpie = "^3.1"
pytest = "^7.1"
pytest-cov = "^3.0"
coverage-badge = "^1.0"
beautifulsoup4 = "^4.8"
blinker = "^1.4"
pyflakes = "^2.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
